# rsume

./: .gitignore  Cargo.toml  README.md  README_zh_CN.md  justfile
src/: main.rs  source.yaml
src/io/: load_json_resume.rs  mod.rs  save_to_pdf.rs
src/io/new/: data.rs  mod.rs  tui.rs
src/io/new/tui/: basic.rs  education.rs  language.rs  mod.rs  reference.rs  skill.rs  work.rs
src/templates/: mod.rs
src/templates/coruscant/: index.html  style.css  supported_languages.rs  template.rs
src/templates/coruscant/basics/: basics_box.rs  open_source.rs
src/templates/coruscant/book/: book_wrapper.rs
src/templates/coruscant/project/: mod.rs  project_wrapper.rs  share.html
src/templates/coruscant/summary/: mod.rs  summary_wrapper.rs
src/templates/simple/: index.html  mod.rs  style.css  supported_languages.rs  template.rs
src/templates/simple/basics/: basics_box.rs  index.html  mod.rs  open_source.rs
src/templates/simple/basics/contact_info/: contact_info_wrapper.rs
src/templates/simple/basics/languages/: language_wrapper.rs
src/templates/simple/basics/skills/: skills_wrapper.rs
src/templates/simple/book/: book_wrapper.rs  index.html  mod.rs
src/templates/simple/data_model/: basics.rs  supported_resume_data.rs
src/templates/simple/education/: education_wrapper.rs
src/templates/simple/project/: project_wrapper.rs  share.html
src/templates/simple/publication/: publication_wrapper.rs
src/templates/simple/shared/: entry.rs
src/templates/simple/summary/: summary_wrapper.rs
src/templates/simple/work/: work_wrapper.rs
src/utils/: mod.rs
