[package]
name = "rsume"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
derive_builder = "0.20.2"
dialoguer = "0.11.0"
dirs = "5.0.1"
headless_chrome = "1.0.15"
json-resume = { git = "https://github.com/hackers267/json-resume.git", branch = "main" }
minijinja = "2.3.1"
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml_ng = "0.10"
tempfile = "3.12.0"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
